<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleTweets</string>
    <string name="action_settings">Settings</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">egtweetsapp</string>
    <string name="title_activity_time_line">Home Timeline</string>
    <string name="screen_name">Screen Name</string>
    <string name="body_tweet">Body Tweet</string>
    <string name="time_ago">Time Ago</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag_line">Tag Line</string>
    <string name="status_count">Status Count</string>
    <string name="follower_count">Follower Count</string>
    <string name="following_count">Following Count</string>
    <string name="username">Username</string>
    <string name="tweet_hint">Hint</string>
    <string name="remaining_chars">Remaining Chars</string>
    <string name="max_characters">Max Characters</string>
    <string name="tweet">Tweet</string>
    <string name="compose_tweet">Compose</string>
    <string name="logout">Logout</string>
    <string name="user_profile">Profile</string>


</resources>