<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.ComposeActivity"
    android:background="#FFF">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="false">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ibGoBack"
            android:src="@drawable/abc_ic_clear_material"
            android:layout_marginBottom="20dp"
            android:layout_gravity="right"
            android:tint="#1B95E0"
            android:background="#FFF"
            android:onClick="onClose"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <ImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="21dp"
                android:layout_toEndOf="@+id/ivProfileImage"
                android:text="@string/username"
                android:textColor="#222"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTagLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/screen_name"
                android:textColor="#AAA"
                android:textSize="15sp"
                android:layout_below="@+id/tvUserName"
                android:layout_toEndOf="@+id/ivProfileImage" />

            <EditText
                android:id="@+id/etBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ivProfileImage"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:hint="@string/tweet_hint"
                android:maxLength="140"
                android:minHeight="110dp"
                android:textColor="#777"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvRemainingChars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/remaining_chars" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_characters"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/tvRemainingChars"
                android:layout_marginStart="19dp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btTweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:background="#1b95e0"
            android:onClick="onTweet"
            android:text="@string/tweet"
            android:textColor="#fff" />
    </LinearLayout>



</RelativeLayout>
